--- a/bio-content.html
+++ b/bio-content.html
@@ -1,7 +1,7 @@
 <head></head>
-<p>Andrew is a student & developer at Memorial University of Newfoundland, based in St. John's, pursuing a B.Sci joint degree in Computer-Science & Economics.</p>
-<p>He has been working in the healthcare industry as a technician for a nursing assessment organization since early 2023.</p>
-<p>Andrew main interests include discrete mathematics & decreasing water emissions, as well as machine learning. </p>
-<p>When not studying, Andrew enjoys producing electronic music & practicing the trumpet; He's been playing trumpet for over 12 years, currently as a member of the MUN Jazz Orchestra & MUN Wind Ensemble.</p>
-<p>Andrew is known for his ability to learn quickly & for his dedication to the task at hand. He is not afraid to get things wrong, as it often leads to the most learning.</p>
+<p>Hello! I'm Andrew, a student & developer @ Memorial University of Newfoundland, based in St. John's, pursuing a B.Sci joint degree in Computer-Science & Economics.</p>
+<p>I've been working in the healthcare industry as a technician for a nursing assessment organization since early 2023.</p>
+<p>Currently my main interests are discrete mathematics & decreasing water emissions, as well as machine learning. </p>
+<p>When I'm not studying, I enjoy producing electronic music & practicing the trumpet; I've been playing trumpet for over 12 years, currently as a member of the MUN Jazz Orchestra & MUN Wind Ensemble.</p>
+<p>I'm known for my ability to learn quickly & for his dedication to the task at hand. I am not afraid to get things wrong, as it often leads to the most learning.</p>
 <body></body>
