Updated bio-content.html wording.

--- a/bio/bio-content.html
+++ b/bio/bio-content.html
@@ -3,5 +3,5 @@
 <p>I've been working in the healthcare industry as a technician for a nursing assessment organization since early 2023.</p>
 <p>Currently my main interests are discrete mathematics, decreasing water footprints, as well as machine learning. </p>
 <p>When I'm not studying, I enjoy producing electronic music & practicing the trumpet; I've been playing trumpet for over 12 years, currently as a member of the MUN Jazz Orchestra & MUN Wind Ensemble.</p>
-<p>I'm known for my dedication to the task at hand. I am not afraid to get things wrong, as it often leads to an opportunity for rapid learning.</p>
+<p>I'm known for my dedication to the task at hand. I am not afraid to get things wrong, as it often leads to the greatest opportunity for rapid learning.</p>
 <body></body>
