--- a/bio/index.html
+++ b/bio/index.html
@@ -1,27 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bio</title>
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="wrapper">
-        <div class="box">
-            <h1>Andrew Ross</h1>
-            <div id="bio-content" style="text-align: center;"></div>  
-            <button id="bio-btn" onclick="goToIndex()" class="btn">Back</button>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container">
+        <div class="wrapper">
+            <div>
+                <h1 class="fs-1"style="text-align: center;">Andrew Ross</h1>
+                <div class="fs-6" id="bio-content" style="text-align: center;padding: 20% 10% 0% 10%;"></div>  
+                <button style="max-width: 50%;margin-bottom: 2vh;" onclick="goToIndex()" class="btn btn-light">Back</button>
+            </div>
+            <script src="../content.js"></script>
+            <script>
+                console.log('Loaded bio-content.html');
+                window.onload = function() {
+                    loadBioContent();
+                };
+            </script>
         </div>
-        <script src="../content.js"></script>
-        <script>
-            console.log('Loaded bio-content.html');
-            window.onload = function() {
-                loadBioContent();
-            };
-        </script>
-      </div>
-      
-    
-
-</body>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </body>
 </html>
