--- a/bio/index.html
+++ b/bio/index.html
@@ -12,9 +12,9 @@
     <div class="container">
         <div class="wrapper">
             <div>
-                <h1 class="fs-1"style="text-align: center;">Andrew Ross</h1>
+                <h1 class="fs-1">Andrew Ross</h1>
                 <div class="fs-6" id="bio-content" style="text-align: center;padding: 20% 10% 0% 10%;"></div>  
-                <button style="max-width: 50%;margin-bottom: 2vh;" onclick="goToIndex()" class="btn btn-light">Back</button>
+                <button style="max-width: 50%;margin: 0vh 12.5vh 2vh;line-height: 0em;" onclick="goToIndex()" class="btn btn-light">Back</button>
             </div>
             <script src="../content.js"></script>
             <script>
