--- a/bio/index.html
+++ b/bio/index.html
@@ -6,15 +6,14 @@
     <title>Bio</title>
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
-        <div class="wrapper">
+      <h1>Andrew Ross</h1>
+      <div class="wrapper" style="align-items: center; margin-top: 13vh;margin-bottom: 1vh;">
             <div>
-                <h1 class="fs-1">Andrew Ross</h1>
-                <div class="fs-6" id="bio-content" style="text-align: center;padding: 20% 10% 0% 10%;"></div>  
-                <button style="max-width: 50%;margin: 0vh 12.5vh 2vh;line-height: 0em;" onclick="goToIndex()" class="btn btn-light">Back</button>
+                <div id="bio-content" style="padding: 0 0.5vw;font-size: small; text-align: center;"></div>  
+                <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToIndex()" class="btn btn-light">Back</button>
             </div>
             <script src="../content.js"></script>
             <script>
@@ -25,6 +24,5 @@
             </script>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
